# NostrAnalytics

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md
.github/workflows/: ci.yml  deploy.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: analytics.rs  error.rs  language.rs  lib.rs  nostr_utils.rs  relay_client.rs  types.rs  utils.rs
crates/analytics/tests/: integration_test.rs
docs/: architecture.md  custom-kind-spec.md  development.md  operations.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisControl.tsx  DateRangeSelector.tsx  EventBrowser.tsx  LanguageSelector.tsx  MetricsChart.tsx  MetricsSelector.tsx  NostrPublisher.tsx  PrivateKeyInput.tsx  PublishedResultsBrowser.tsx  RelaySelector.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: db.ts  languages.ts  nostr.ts
frontend/src/state/: store.ts
frontend/src/types/: index.ts
frontend/src/wasm/: analytics.ts
scripts/: build-wasm.sh  pre-commit-check.sh
