[workspace]
members = ["crates/analytics"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NostrAnalytics Contributors"]
license = "MIT"

[workspace.dependencies]
nostr = { version = "0.43", default-features = false, features = ["std"] }
whatlang = "0.16"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

